syntax = "proto3";

package live.v1;

option go_package = "github.com/visionworld/live-service/proto/live/v1;live_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

// 直播服务定义
service LiveService {
  // 创建直播间
  rpc CreateLiveRoom(CreateLiveRoomRequest) returns (CreateLiveRoomResponse);
  
  // 获取直播间信息
  rpc GetLiveRoom(GetLiveRoomRequest) returns (GetLiveRoomResponse);
  
  // 更新直播间信息
  rpc UpdateLiveRoom(UpdateLiveRoomRequest) returns (UpdateLiveRoomResponse);
  
  // 删除直播间
  rpc DeleteLiveRoom(DeleteLiveRoomRequest) returns (google.protobuf.Empty);
  
  // 开始直播
  rpc StartLive(StartLiveRequest) returns (StartLiveResponse);
  
  // 结束直播
  rpc StopLive(StopLiveRequest) returns (StopLiveResponse);
  
  // 获取直播间列表
  rpc GetLiveRooms(GetLiveRoomsRequest) returns (GetLiveRoomsResponse);
  
  // 获取推荐直播间
  rpc GetRecommendedLiveRooms(GetRecommendedLiveRoomsRequest) returns (GetRecommendedLiveRoomsResponse);
  
  // 获取直播间观众列表
  rpc GetLiveViewers(GetLiveViewersRequest) returns (GetLiveViewersResponse);
  
  // 发送直播间消息
  rpc SendLiveMessage(SendLiveMessageRequest) returns (SendLiveMessageResponse);
  
  // 获取直播间消息
  rpc GetLiveMessages(GetLiveMessagesRequest) returns (GetLiveMessagesResponse);
  
  // 直播间点赞
  rpc LikeLiveRoom(LikeLiveRoomRequest) returns (LikeLiveRoomResponse);
  
  // 直播间送礼物
  rpc SendGift(SendGiftRequest) returns (SendGiftResponse);
  
  // 获取直播间统计
  rpc GetLiveStats(GetLiveStatsRequest) returns (GetLiveStatsResponse);
  
  // 获取直播录制信息
  rpc GetLiveRecording(GetLiveRecordingRequest) returns (GetLiveRecordingResponse);
  
  // 直播间禁言
  rpc MuteUser(MuteUserRequest) returns (MuteUserResponse);
  
  // 直播间踢人
  rpc KickUser(KickUserRequest) returns (KickUserResponse);
  
  // 获取直播间禁言列表
  rpc GetMutedUsers(GetMutedUsersRequest) returns (GetMutedUsersResponse);
  
  // 直播间推流状态检查
  rpc CheckStreamStatus(CheckStreamStatusRequest) returns (CheckStreamStatusResponse);
  
  // 获取推流地址
  rpc GetStreamUrl(GetStreamUrlRequest) returns (GetStreamUrlResponse);
  
  // 获取播放地址
  rpc GetPlayUrl(GetPlayUrlRequest) returns (GetPlayUrlResponse);
}

// 直播状态枚举
enum LiveStatus {
  LIVE_STATUS_UNSPECIFIED = 0;
  LIVE_STATUS_PREPARED = 1;          // 准备中
  LIVE_STATUS_LIVING = 2;            // 直播中
  LIVE_STATUS_PAUSED = 3;            // 暂停中
  LIVE_STATUS_ENDED = 4;             // 已结束
  LIVE_STATUS_BANNED = 5;            // 被封禁
  LIVE_STATUS_ERROR = 6;             // 异常状态
}

// 推流状态枚举
enum StreamStatus {
  STREAM_STATUS_UNSPECIFIED = 0;
  STREAM_STATUS_DISCONNECTED = 1;    // 未连接
  STREAM_STATUS_CONNECTING = 2;      // 连接中
  STREAM_STATUS_CONNECTED = 3;       // 已连接
  STREAM_STATUS_STREAMING = 4;       // 推流中
  STREAM_STATUS_ERROR = 5;           // 推流异常
}

// 直播间类型枚举
enum LiveRoomType {
  LIVE_ROOM_TYPE_UNSPECIFIED = 0;
  LIVE_ROOM_TYPE_NORMAL = 1;         // 普通直播间
  LIVE_ROOM_TYPE_GAME = 2;           // 游戏直播间
  LIVE_ROOM_TYPE_MUSIC = 3;          // 音乐直播间
  LIVE_ROOM_TYPE_EDUCATION = 4;      // 教育直播间
  LIVE_ROOM_TYPE_SPORTS = 5;         // 体育直播间
  LIVE_ROOM_TYPE_ENTERTAINMENT = 6;  // 娱乐直播间
}

// 消息类型枚举
enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_TEXT = 1;             // 文本消息
  MESSAGE_TYPE_IMAGE = 2;            // 图片消息
  MESSAGE_TYPE_GIFT = 3;             // 礼物消息
  MESSAGE_TYPE_LIKE = 4;             // 点赞消息
  MESSAGE_TYPE_SYSTEM = 5;           // 系统消息
  MESSAGE_TYPE_JOIN = 6;             // 加入消息
  MESSAGE_TYPE_LEAVE = 7;            // 离开消息
}

// 礼物类型枚举
enum GiftType {
  GIFT_TYPE_UNSPECIFIED = 0;
  GIFT_TYPE_NORMAL = 1;              // 普通礼物
  GIFT_TYPE_SPECIAL = 2;             // 特殊礼物
  GIFT_TYPE_RARE = 3;                // 稀有礼物
  GIFT_TYPE_LEGENDARY = 4;           // 传说礼物
}

// 直播间信息
message LiveRoom {
  string id = 1;
  string title = 2;
  string description = 3;
  string owner_id = 4;
  string owner_name = 5;
  string owner_avatar = 6;
  LiveRoomType type = 7;
  LiveStatus status = 8;
  int32 viewer_count = 9;
  int32 like_count = 10;
  string cover_url = 11;
  string category_id = 12;
  repeated string tags = 13;
  bool is_public = 14;
  bool enable_chat = 15;
  bool enable_gift = 16;
  google.protobuf.Timestamp start_time = 17;
  google.protobuf.Timestamp end_time = 18;
  google.protobuf.Timestamp created_at = 19;
  google.protobuf.Timestamp updated_at = 20;
  map<string, string> stream_config = 21;     // 推流配置
  map<string, string> extra = 22;             // 扩展字段
}

// 直播间观众信息
message LiveViewer {
  string user_id = 1;
  string user_name = 2;
  string user_avatar = 3;
  google.protobuf.Timestamp join_time = 4;
  int32 watch_duration = 5;              // 观看时长（秒）
  bool is_muted = 6;
  map<string, string> user_level = 7;    // 用户等级信息
}

// 直播间消息
message LiveMessage {
  string id = 1;
  string room_id = 2;
  string user_id = 3;
  string user_name = 4;
  string user_avatar = 5;
  MessageType type = 6;
  string content = 7;
  google.protobuf.Timestamp created_at = 8;
  map<string, string> extra = 9;           // 扩展字段（如礼物信息）
}

// 礼物信息
message Gift {
  string id = 1;
  string name = 2;
  string description = 3;
  string icon_url = 4;
  int32 price = 5;                         // 价格（虚拟货币）
  GiftType type = 6;
  int32 level = 7;                         // 等级要求
  bool is_available = 8;
  google.protobuf.Timestamp created_at = 9;
}

// 直播统计信息
message LiveStats {
  string room_id = 1;
  int32 total_viewers = 2;                 // 总观看人数
  int32 current_viewers = 3;              // 当前观看人数
  int32 max_viewers = 4;                    // 最高观看人数
  int32 total_likes = 5;                    // 总点赞数
  int32 total_gifts = 6;                    // 总礼物数
  int32 total_revenue = 7;                  // 总收入
  google.protobuf.Duration duration = 8;     // 直播时长
  double avg_watch_duration = 9;           // 平均观看时长
  map<string, int32> gift_stats = 10;      // 礼物统计
}

// 直播录制信息
message LiveRecording {
  string id = 1;
  string room_id = 2;
  string title = 3;
  string file_url = 4;
  string thumbnail_url = 5;
  int64 file_size = 6;
  google.protobuf.Duration duration = 7;
  google.protobuf.Timestamp start_time = 8;
  google.protobuf.Timestamp end_time = 9;
  string quality = 10;                     // 录制质量
  bool is_available = 11;
  map<string, string> metadata = 12;         // 元数据
}

// 创建直播间请求
message CreateLiveRoomRequest {
  string title = 1;
  string description = 2;
  string owner_id = 3;
  LiveRoomType type = 4;
  string cover_url = 5;
  string category_id = 6;
  repeated string tags = 7;
  bool is_public = 8;
  map<string, string> stream_config = 9;
}

// 创建直播间响应
message CreateLiveRoomResponse {
  LiveRoom room = 1;
  string stream_key = 2;                   // 推流密钥
  string server_url = 3;                     // 推流服务器地址
}

// 获取直播间信息请求
message GetLiveRoomRequest {
  string room_id = 1;
  string user_id = 2;                        // 用户ID（用于权限检查）
}

// 获取直播间信息响应
message GetLiveRoomResponse {
  LiveRoom room = 1;
  bool can_join = 2;                         // 是否可以加入
  string play_url = 3;                       // 播放地址
}

// 更新直播间信息请求
message UpdateLiveRoomRequest {
  string room_id = 1;
  string title = 2;
  string description = 3;
  string cover_url = 4;
  repeated string tags = 5;
  bool enable_chat = 6;
  bool enable_gift = 7;
  string owner_id = 8;                       // 用于权限验证
}

// 更新直播间信息响应
message UpdateLiveRoomResponse {
  LiveRoom room = 1;
  bool success = 2;
}

// 删除直播间请求
message DeleteLiveRoomRequest {
  string room_id = 1;
  string owner_id = 2;                       // 用于权限验证
}

// 开始直播请求
message StartLiveRequest {
  string room_id = 1;
  string owner_id = 2;
  map<string, string> stream_config = 3;  // 推流配置
}

// 开始直播响应
message StartLiveResponse {
  bool success = 1;
  string message = 2;
  string stream_key = 3;                     // 推流密钥
  string server_url = 4;                     // 推流服务器地址
}

// 结束直播请求
message StopLiveRequest {
  string room_id = 1;
  string owner_id = 2;
}

// 结束直播响应
message StopLiveResponse {
  bool success = 1;
  string message = 2;
  string recording_id = 3;                   // 录制文件ID
}

// 获取直播间列表请求
message GetLiveRoomsRequest {
  int32 page = 1;
  int32 page_size = 2;
  LiveRoomType type = 3;
  LiveStatus status = 4;
  string category_id = 5;
  string sort_by = 6;                        // 排序字段
  bool ascending = 7;
}

// 获取直播间列表响应
message GetLiveRoomsResponse {
  repeated LiveRoom rooms = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// 获取推荐直播间请求
message GetRecommendedLiveRoomsRequest {
  string user_id = 1;
  int32 limit = 2;
  repeated string categories = 3;            // 偏好分类
}

// 获取推荐直播间响应
message GetRecommendedLiveRoomsResponse {
  repeated LiveRoom rooms = 1;
  repeated string reasons = 2;                 // 推荐理由
}

// 获取直播间观众列表请求
message GetLiveViewersRequest {
  string room_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// 获取直播间观众列表响应
message GetLiveViewersResponse {
  repeated LiveViewer viewers = 1;
  int32 total = 2;
}

// 发送直播间消息请求
message SendLiveMessageRequest {
  string room_id = 1;
  string user_id = 2;
  MessageType type = 3;
  string content = 4;
  map<string, string> extra = 5;
}

// 发送直播间消息响应
message SendLiveMessageResponse {
  LiveMessage message = 1;
  bool success = 2;
}

// 获取直播间消息请求
message GetLiveMessagesRequest {
  string room_id = 1;
  int32 limit = 2;
  string before_id = 3;                      // 获取此ID之前的消息
}

// 获取直播间消息响应
message GetLiveMessagesResponse {
  repeated LiveMessage messages = 1;
  bool has_more = 2;
}

// 直播间点赞请求
message LikeLiveRoomRequest {
  string room_id = 1;
  string user_id = 2;
}

// 直播间点赞响应
message LikeLiveRoomResponse {
  int32 like_count = 1;
  bool success = 2;
}

// 发送礼物请求
message SendGiftRequest {
  string room_id = 1;
  string user_id = 2;
  string gift_id = 3;
  int32 quantity = 4;
  string message = 5;
}

// 发送礼物响应
message SendGiftResponse {
  bool success = 1;
  int32 user_balance = 2;                    // 用户剩余余额
  string gift_name = 3;
  int32 total_value = 4;                     // 礼物总价值
}

// 获取直播间统计请求
message GetLiveStatsRequest {
  string room_id = 1;
  string date = 2;                           // 日期（YYYY-MM-DD）
}

// 获取直播间统计响应
message GetLiveStatsResponse {
  LiveStats stats = 1;
  google.protobuf.Timestamp generated_at = 2;
}

// 获取直播录制信息请求
message GetLiveRecordingRequest {
  string recording_id = 1;
  string room_id = 2;
}

// 获取直播录制信息响应
message GetLiveRecordingResponse {
  LiveRecording recording = 1;
}

// 禁言用户请求
message MuteUserRequest {
  string room_id = 1;
  string user_id = 2;                        // 执行禁言的用户
  string target_user_id = 3;                 // 被禁言的用户
  int32 duration = 4;                        // 禁言时长（秒）
  string reason = 5;
}

// 禁言用户响应
message MuteUserResponse {
  bool success = 1;
  google.protobuf.Timestamp mute_end_time = 2;
}

// 踢人请求
message KickUserRequest {
  string room_id = 1;
  string user_id = 2;                        // 执行踢人的用户
  string target_user_id = 3;                 // 被踢的用户
  string reason = 4;
}

// 踢人响应
message KickUserResponse {
  bool success = 1;
}

// 获取禁言用户列表请求
message GetMutedUsersRequest {
  string room_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// 获取禁言用户列表响应
message GetMutedUsersResponse {
  repeated LiveViewer muted_users = 1;
  int32 total = 2;
}

// 推流状态检查请求
message CheckStreamStatusRequest {
  string room_id = 1;
  string stream_key = 2;
}

// 推流状态检查响应
message CheckStreamStatusResponse {
  StreamStatus status = 1;
  string message = 2;
  google.protobuf.Timestamp last_check_time = 3;
}

// 获取推流地址请求
message GetStreamUrlRequest {
  string room_id = 1;
  string user_id = 2;
}

// 获取推流地址响应
message GetStreamUrlResponse {
  string server_url = 1;
  string stream_key = 2;
  string rtmp_url = 3;                       // 完整的RTMP推流地址
}

// 获取播放地址请求
message GetPlayUrlRequest {
  string room_id = 1;
  string protocol = 2;                     // 协议：hls, flv, rtmp
  string quality = 3;                      // 清晰度：sd, hd, fhd
}

// 获取播放地址响应
message GetPlayUrlResponse {
  string play_url = 1;
  string protocol = 2;
  string quality = 3;
  google.protobuf.Duration expire_time = 4;  // 地址过期时间
}