syntax = "proto3";

package video.v1;

option go_package = "github.com/visionworld/video-service/proto/video/v1;video_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

// 视频服务定义
service VideoService {
  // 获取推荐视频列表
  rpc GetRecommendedVideos(GetRecommendedVideosRequest) returns (GetRecommendedVideosResponse);
  
  // 获取热门视频列表
  rpc GetTrendingVideos(GetTrendingVideosRequest) returns (GetTrendingVideosResponse);
  
  // 获取视频详情
  rpc GetVideoDetail(GetVideoDetailRequest) returns (GetVideoDetailResponse);
  
  // 上传视频（初始化上传）
  rpc UploadVideo(UploadVideoRequest) returns (UploadVideoResponse);
  
  // 上传视频分片
  rpc UploadVideoChunk(UploadVideoChunkRequest) returns (UploadVideoChunkResponse);
  
  // 完成视频上传
  rpc CompleteVideoUpload(CompleteVideoUploadRequest) returns (CompleteVideoUploadResponse);
  
  // 获取用户视频列表
  rpc GetUserVideos(GetUserVideosRequest) returns (GetUserVideosResponse);
  
  // 搜索视频
  rpc SearchVideos(SearchVideosRequest) returns (SearchVideosResponse);
  
  // 更新视频信息
  rpc UpdateVideoInfo(UpdateVideoInfoRequest) returns (UpdateVideoInfoResponse);
  
  // 删除视频
  rpc DeleteVideo(DeleteVideoRequest) returns (google.protobuf.Empty);
  
  // 获取视频播放地址
  rpc GetVideoPlayUrl(GetVideoPlayUrlRequest) returns (GetVideoPlayUrlResponse);
}

// 视频状态枚举
enum VideoStatus {
  VIDEO_STATUS_UNSPECIFIED = 0;
  VIDEO_STATUS_UPLOADING = 1;     // 上传中
  VIDEO_STATUS_PROCESSING = 2;    // 处理中（转码）
  VIDEO_STATUS_REVIEWING = 3;     // 审核中
  VIDEO_STATUS_PUBLISHED = 4;     // 已发布
  VIDEO_STATUS_REJECTED = 5;      // 审核拒绝
  VIDEO_STATUS_DELETED = 6;       // 已删除
}

// 视频质量枚举
enum VideoQuality {
  VIDEO_QUALITY_UNSPECIFIED = 0;
  VIDEO_QUALITY_360P = 1;
  VIDEO_QUALITY_480P = 2;
  VIDEO_QUALITY_720P = 3;
  VIDEO_QUALITY_1080P = 4;
  VIDEO_QUALITY_2K = 5;
  VIDEO_QUALITY_4K = 6;
}

// 分类信息
message Category {
  string category_id = 1;
  string name = 2;
  string icon = 3;
  int32 sort_order = 4;
  google.protobuf.Timestamp created_at = 5;
}

// 视频作者信息
message VideoAuthor {
  string user_id = 1;
  string username = 2;
  string avatar = 3;
  int64 follower_count = 4;
  bool is_followed = 5;  // 当前用户是否关注了作者
}

// 视频文件信息
message VideoFile {
  VideoQuality quality = 1;
  string url = 2;
  int64 size = 3;  // 文件大小（字节）
  int32 width = 4;
  int32 height = 5;
  string format = 6;  // 格式：mp4, avi, mov等
  int32 bitrate = 7;  // 比特率
}

// 视频基础信息
message VideoInfo {
  string video_id = 1;
  string title = 2;
  string description = 3;
  int32 duration = 4;  // 时长（秒）
  string cover_url = 5;
  VideoStatus status = 6;
  VideoAuthor author = 7;
  Category category = 8;
  repeated string tags = 9;
  google.protobuf.Timestamp published_at = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
  
  // 统计数据
  int64 view_count = 13;
  int64 like_count = 14;
  int64 comment_count = 15;
  int64 share_count = 16;
  int64 favorite_count = 17;
  
  // 用户交互状态
  bool is_liked = 18;      // 当前用户是否点赞
  bool is_favorited = 19;  // 当前用户是否收藏
  bool is_followed = 20;   // 当前用户是否关注作者
  
  // 播放选项
  repeated VideoFile video_files = 21;
}

// 分页信息
message Pagination {
  int32 page = 1;
  int32 page_size = 2;
  int32 total = 3;
  int32 total_pages = 4;
  bool has_next = 5;
  bool has_prev = 6;
}

// 获取推荐视频列表请求
message GetRecommendedVideosRequest {
  string user_id = 1;        // 用户ID（可选，登录后推荐更准确）
  int32 page = 2;
  int32 page_size = 3;
  string category_id = 4;    // 分类筛选
  string algorithm = 5;      // 推荐算法：hot-热门，new-最新，ai-智能推荐
}

// 获取推荐视频列表响应
message GetRecommendedVideosResponse {
  repeated VideoInfo videos = 1;
  Pagination pagination = 2;
}

// 获取热门视频列表请求
message GetTrendingVideosRequest {
  int32 page = 1;
  int32 page_size = 2;
  string time_range = 3;     // 时间范围：day-日榜，week-周榜，month-月榜，all-总榜
  string category_id = 4;    // 分类筛选
}

// 获取热门视频列表响应
message GetTrendingVideosResponse {
  repeated VideoInfo videos = 1;
  Pagination pagination = 2;
}

// 获取视频详情请求
message GetVideoDetailRequest {
  string video_id = 1;
  string user_id = 2;        // 当前用户ID（可选）
  bool include_related = 3;  // 是否包含相关视频
}

// 获取视频详情响应
message GetVideoDetailResponse {
  VideoInfo video = 1;
  repeated VideoInfo related_videos = 2;  // 相关视频
}

// 上传视频请求
message UploadVideoRequest {
  string user_id = 1;
  string title = 2;
  string description = 3;
  string category_id = 4;
  repeated string tags = 5;
  int64 file_size = 6;       // 文件总大小
  string file_name = 7;      // 原始文件名
  string file_hash = 8;      // 文件MD5哈希
}

// 上传视频响应
message UploadVideoResponse {
  string video_id = 1;
  string upload_id = 2;      // 上传会话ID
  int32 chunk_size = 3;      // 建议的分片大小
  int32 total_chunks = 4;    // 总分片数
  repeated string upload_urls = 5;  // 每个分片的上传URL
}

// 上传视频分片请求
message UploadVideoChunkRequest {
  string video_id = 1;
  string upload_id = 2;
  int32 chunk_index = 3;     // 分片索引
  bytes chunk_data = 4;      // 分片数据
  string chunk_hash = 5;     // 分片MD5哈希
}

// 上传视频分片响应
message UploadVideoChunkResponse {
  bool success = 1;
  string message = 2;
  int32 uploaded_chunks = 3;  // 已上传的分片数
}

// 完成视频上传请求
message CompleteVideoUploadRequest {
  string video_id = 1;
  string upload_id = 2;
}

// 完成视频上传响应
message CompleteVideoUploadResponse {
  string video_id = 1;
  VideoStatus status = 2;
  string message = 3;
}

// 获取用户视频列表请求
message GetUserVideosRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
  string sort_by = 4;        // 排序：new-最新，hot-最热，view-最多观看
  VideoStatus status = 5;    // 状态筛选
}

// 获取用户视频列表响应
message GetUserVideosResponse {
  repeated VideoInfo videos = 1;
  Pagination pagination = 2;
}

// 搜索视频请求
message SearchVideosRequest {
  string keyword = 1;
  int32 page = 2;
  int32 page_size = 3;
  string category_id = 4;    // 分类筛选
  string sort_by = 5;        // 排序：relevance-相关度，new-最新，view-最多观看
  string user_id = 6;        // 用户ID（用于个性化搜索）
}

// 搜索视频响应
message SearchVideosResponse {
  repeated VideoInfo videos = 1;
  Pagination pagination = 2;
  repeated string suggestions = 3;  // 搜索建议
}

// 更新视频信息请求
message UpdateVideoInfoRequest {
  string video_id = 1;
  string user_id = 2;        // 操作者用户ID
  google.protobuf.StringValue title = 3;
  google.protobuf.StringValue description = 4;
  google.protobuf.StringValue category_id = 5;
  repeated string tags = 6;
}

// 更新视频信息响应
message UpdateVideoInfoResponse {
  VideoInfo video = 1;
}

// 删除视频请求
message DeleteVideoRequest {
  string video_id = 1;
  string user_id = 2;  // 操作者用户ID
}

// 获取视频播放地址请求
message GetVideoPlayUrlRequest {
  string video_id = 1;
  string user_id = 2;        // 用户ID（用于权限验证）
  VideoQuality quality = 3;  // 清晰度要求
}

// 获取视频播放地址响应
message GetVideoPlayUrlResponse {
  string url = 1;
  VideoQuality quality = 2;
  int64 expires_at = 3;      // 过期时间（Unix时间戳）
  string token = 4;          // 播放令牌
}